added and styled chatapp

--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello World</h1>
+  <main>
+    <ol id="history">
+    </ol>
+      <form action="">
+        <input id="initials">
+        <input id="message">
+        <button>Send</button>
+      </form>
+  </main>
 </body>
 </html>
