added dummy chat text

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
   <main>
     <ol id="history">
+      <li>Victor says: Hi Amine</li>
+      <li>Amine says: What's up</li>
+      <li>Victor says: Nothing much, just coding!</li>
+      <li>Amine says: Cool man, keep it up!</li>
     </ol>
       <form action="">
         <input id="initials">
