Added jQuery and tested alert

--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
         <button>Send</button>
       </form>
   </main>
+
+  <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
